--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "framer-motion": "^11.0.26",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.75",
     "eslint": "^8",
     "eslint-config-next": "14.1.4"
   }
